@@ -23,13 +23,6 @@ class Turba_Driver_Ldap extends Turba_Driver
     protected $_ds = 0;
 
     /**
-     * Schema object.
-     *
-     * @var Net_LDAP_Schema
-     */
-    protected $_schema;
-
-    /**
      * Cache _getSyntax() calls.
      *
      * @var array
@@ -695,7 +688,8 @@ class Turba_Driver_Ldap extends Turba_Driver
      */
     protected function _getSyntax($att)
     {
-        $schema = $this->_ldap->schema();
+        $ldap = new Horde_Ldap($this->_convertParameters($this->_params));
+        $schema = $ldap->schema();
 
         if (!isset($this->_syntaxCache[$att])) {
             $attv = $schema->get('attribute', $att);
@@ -707,4 +701,41 @@ class Turba_Driver_Ldap extends Turba_Driver
         return $this->_syntaxCache[$att];
     }
 
+    /**
+     * Converts Turba connection parameter so Horde_Ldap parameters.
+     *
+     * @param array $in  Turba parameters.
+     *
+     * @return array  Horde_Ldap parameters.
+     */
+    protected function _convertParameters(array $in)
+    {
+        $map = array(
+            'server' => 'hostspec',
+            'port' => 'port',
+            'tls' => 'tls',
+            'version' => 'version',
+            'root' => 'basedn',
+            'bind_dn' => 'binddn',
+            'bind_password' => 'bindpw',
+            // can both be specified in Turba but only one in Horde_Ldap.
+            //'objectclass',
+            //'filter' => 'filter',
+            'scope' => 'scope',
+            // charset is always utf-8
+            //'charset',
+            // Not yet implemented.
+            //'deref',
+            //'referrals',
+            //'sizelimit',
+            //'dn',
+        );
+        $out = array();
+        foreach ($in as $key => $value) {
+            if (isset($map[$key])) {
+                $out[$map[$key]] = $value;
+            }
+        }
+        return $out;
+    }
 }
