@@ -2,6 +2,7 @@
 v3.0.1-git
 ----------
 
+[jan] Fix LDAP schema checking (Bug #9826).
 [jan] Fix creating temporary files with open_basedir restrictions.
 [mjr] Fix importing objects with categories (Bug #9841).
 [mjr] Fix merging duplicate contacts (Bug #9828).
